# bjorn-detector

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Bjorn_Detector.py  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  NEW_README.md  README.md  SECURITY.md  VERSIONING.md  bjorn-detector.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: greetings.yml  python.yml  release-controller.yml  stale.yml  version-controller.yml
scripts/bump_year/: main.py
scripts/commit_msg_version_bump/: main.py
scripts/control_commit/: main.py
scripts/generate_changelog/: main.py
src/: config.py  logger.py  main.py
src/utils/discord/: main.py
src/utils/smtp/: main.py
src/utils/telegram/: main.py
tests/: test_main.py
